Agregadas variables al .env

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 PORT = '3001'
-// No poner punto y coma al final de PORT
+
+DB_NAME = 'cf'
+DB_USERNAME = 'root'
+DB_PASSWORD = '1234'
+DB_HOST = 'localhost'
+
+
 SECRET_KEY = 'eHd^%!l4f/Bt'
