--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -73,7 +75,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-
+.env
 .env.development.local
 .env.test.local
 .env.production.local
